--- a/data/manifest.json
+++ b/data/manifest.json
@@ -3,13 +3,13 @@
     "name": "s-restaurants",
     "icons": [
       {
-        "src": "/img/M-1.png",
-        "type": "img/png",
+        "src": "../img/M-1.png",
+        "type": "../img/png",
         "sizes": "192x192"
       },
       {
-        "src": "/img/M-1.png",
-        "type": "img/png",
+        "src": "../img/M-1.png",
+        "type": "../img/png",
         "sizes": "512x512"
       }
     ],
