--- a/data/manifest.json
+++ b/data/manifest.json
@@ -13,7 +13,7 @@
         "sizes": "183x183"
       }
     ],
-    "start_url": "index.html?launcher=true",
+    "start_url": "../",
     "background_color": "#3367D6",
     "display": "standalone",
     "scope": "../",
